<resources>
    <string name="app_name">Shup</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome on"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- String related to user account -->
    <string name="yname">Your name here</string>
    <string name="yemail">Your email here</string>
    <string name="yaddress">Your address here</string>
    <string name="shup">Shup</string>

</resources>
