<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/homewithouttext" />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    <TextView
        android:id="@+id/welcomeHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/SfBold"
        android:textSize="30dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/welcome" />


    <TextView
        android:id="@+id/shupHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/SfBold"
        android:textSize="36dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/shup"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:fontFamily="@font/SfRegular"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:fontFamily="@font/SfRegular"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:gravity="center"
        android:selectAllOnFocus="true" />

    <Button
    android:id="@+id/signin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_marginStart="48dp"
    android:layout_marginTop="80dp"
    android:layout_marginEnd="48dp"
    android:fontFamily="@font/SfBold"
    android:textSize="20dp"
    android:enabled="false"
    android:text="@string/action_sign_in_short"
    android:background="@drawable/radius" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:enabled="false"
        android:text="@string/action_sign_up_short"
        android:background="@drawable/radius"
        android:layout_marginStart="48dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/SfBold"
        android:textSize="20dp"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />
  </LinearLayout>
</RelativeLayout>